# rekordbox_creative

./: .gitignore  CLAUDE.md  build.py  claude-progress.txt  init.sh  pioneer_artwork_mapping.json  pyproject.toml
.claude/: settings.json
.claude/agent-memory/backend/: MEMORY.md
.claude/agents/: backend.md  frontend.md  initializer.md  qa.md  researcher.md
.claude/hooks/: lint-on-save.sh  verify-tests-on-stop.sh
.claude/rules/: agent-workflow.md  code-style.md  testing.md
.claude/rules/backend/: analysis.md  database.md  scoring.md
.claude/rules/frontend/: ui-guidelines.md
docs/: AGENT_WORKFLOWS.md  ALGORITHM_SPEC.md  ARCHITECTURE.md  DATA_MODELS.md  FEATURES.json  IMPLEMENTATION_ROADMAP.md  PROJECT_OVERVIEW.md  UI_SPEC.md
src/rekordbox_creative/: __init__.py  __main__.py  app.py
src/rekordbox_creative/analysis/: artwork.py  cache_manager.py  metadata.py  mixer.py  processor.py  scanner.py  waveform.py
src/rekordbox_creative/db/: cache.py  database.py  history.py  models.py  preferences.py  tags.py
src/rekordbox_creative/export/: csv.py  m3u.py  playlist.py  rekordbox.py
src/rekordbox_creative/graph/: clustering.py  graph.py  layout.py  pathfinding.py  scoring.py
src/rekordbox_creative/suggestions/: engine.py  filters.py  (+2 more)
tests/: conftest.py  test_artwork.py  test_clustering.py  test_database.py  test_export.py  test_graph.py  test_history.py  test_mixer.py  test_models.py  test_pathfinding.py  test_performance.py  test_preferences.py  test_scanner.py  test_scoring.py  test_set_generator.py  test_suggestions.py  test_tags.py  test_waveform.py
(+33 files in other folders)
