[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rekordbox-creative"
version = "0.1.0"
description = "Node-based playlist suggestion algorithm for DJs"
requires-python = ">=3.10"
dependencies = [
    "audio_analyzer @ git+https://github.com/samuelih/audio_analyzer.git",
    "pydantic>=2.0",
    "networkx",
    "scikit-learn",
    "mutagen",
    "numpy",
    "scipy",
    "PyQt6",
    "PyQt6-WebEngine",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
